Introduce VectorFloat/ByteSequence abstractions to allow alternative implementations of indexed vectors/auxiliary byte structures. Remove support for graph indexes over byte vectors. Introduce experimental native vectorization provider. Introduce experimental fused graphs.